--- a/public/css/header.css
+++ b/public/css/header.css
@@ -6,6 +6,10 @@ header>a{
     border-bottom: 1px solid #25cbd3;
 }
 
+header a img{
+    width: 250px;
+}
+
 header nav ul{
     text-align: center;
     padding: 0;
