corrigido estrutura do index.html & estilização do footer

--- a/public/css/devaria.css
+++ b/public/css/devaria.css
@@ -1,6 +1,6 @@
 /* Estilos Globais */
 html{
-    height: 100vh;
+    height: 100%;
 }
 
 body{
@@ -10,8 +10,23 @@ body{
     margin: 0;
 }
 
+.title{
+    padding: 0 20px;
+    font-size: 1.55em;
+    text-transform: uppercase;
+}
+h1.title{
+    margin: 40px auto 20px;
+}
+
+.text-justify{
+    text-align: justify;
+}
+
 @media screen and (min-width:992px) {
     body{
-        font-size: 28px;
+        font-size: 20px;
     }
+    
+    
 }
