--- a/public/css/devaria.css
+++ b/public/css/devaria.css
@@ -23,10 +23,17 @@ h1.title{
     text-align: justify;
 }
 
+.text-center{
+    text-align: center;
+}
+
 @media screen and (min-width:992px) {
     body{
         font-size: 20px;
     }
-    
+    .w-70pct-desketop{
+        width: 70%;
+        padding: 20px;
+    }
     
 }
