--- a/public/css/devaria.css
+++ b/public/css/devaria.css
@@ -26,7 +26,11 @@ h1.title{
 .text-center{
     text-align: center;
 }
+.margin-horizontal-20px{
+    margin-left: 20px;
+    margin-right: 20px;
 
+}
 @media screen and (min-width:992px) {
     body{
         font-size: 20px;
